# maimai-keywords-predictor

./: .gitignore  README.md  combined-tags-mapped.json  combined-tags.json  consts.py  eval_model.py  eval_model_transformer.py  label_getter.py  pyproject.toml  serializer.py  tag_id_mapping.py  test_xgboost.py  title_id.csv  title_id_getter.py  train.py  train_bilstm.py  train_transformer.py
info/: chart_info.csv
models/: Attention.py  BiLSTM.py  LSTM.py  Transformer.py  Transformer2.py
new_data/: 12345_4.json
new_maidata/world's end blackbox/: maidata.txt
preprocess/: enhance_json.py  fixSlideTime.py
serialized_data/: 10021_1.json  10021_2.json  10021_3.json  10021_4.json  10021_5.json  10044_1.json  10044_2.json  10044_3.json  10044_4.json  10070_1.json  10070_2.json  10070_3.json  10070_4.json  100_1.json  100_2.json  100_3.json  100_4.json  100_5.json  10117_1.json  10117_2.json  10117_3.json  10117_4.json  10122_1.json  10122_2.json  10122_3.json  10122_4.json  10125_1.json  10125_2.json  10125_3.json  10125_4.json  10128_1.json  10128_2.json  10128_3.json  10128_4.json  10145_1.json  10145_2.json  10145_3.json  10145_4.json  10146_1.json  10146_2.json  (+6316 more)
trained_models/: best_model.pth  best_model_gavzpzpq.pth  model_epoch_10.pth  model_epoch_100.pth  model_epoch_110.pth  model_epoch_120.pth  model_epoch_20.pth  model_epoch_30.pth  model_epoch_40.pth  model_epoch_50.pth  model_epoch_60.pth  model_epoch_70.pth  model_epoch_80.pth  model_epoch_90.pth
trained_models/7t82x81z/: best_model.pth  (+30 more)
utils/: chartDataset.py  focalLoss.py
wandb/: latest-run
(+38 files in other folders)
