[project]
name = "maimai"
version = "0.1.0"
description = "A ML project to predict keywords from maimai chart"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "swanlab>=0.6.7",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.53.3",
    "wandb>=0.21.0",
    "xgboost>=3.0.2",
]


